--- a/android_studio_study/AiEng_v3_01/app/src/main/AndroidManifest.xml
+++ b/android_studio_study/AiEng_v3_01/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme"></activity>
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
